package com.barbearia.model;

public enum AgendamentoStatus {
    CONFIRMADO,
    CANCELADO,
    CONCLUIDO
}
